adicionando conf para enviar email

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -173,7 +173,11 @@ attachments.path=data/attachments
 # Mail configuration
 # ~~~~~ 
 # Default is to use a mock Mailer
-mail.smtp=mock
+#mail.smtp=mock
+mail.smtp.host=smtp.gmail.com
+mail.smtp.user=projeto.redacao.2013@gmail.com
+mail.smtp.pass=marcosnelsom
+mail.smtp.channel=ssl
 
 # Or, specify mail host configuration
 # mail.smtp.host=127.0.0.1
