adicionando banco correto

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,8 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-db=dbc:postgresql://ec2-23-21-130-189.compute-1.amazonaws.com:5432/dfshp5tk24hus7?user=nwyetnctpuyeos&password=3tsFrdft7wiHIX45KGM_a1_0IX&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+
+db=postgres://ec2-54-225-121-179.compute-1.amazonaws.com:5432/d6c3l678d6blmo?user=sgvwtteepghuko&password=-soV4O0FkOUxe_FpIp2hPcPT_G&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 jpa.ddl=update
 
