upload de arquivos

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,14 +83,15 @@ date.format=yyyy-MM-dd
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
 
-db=postgres://ec2-54-225-121-179.compute-1.amazonaws.com:5432/d6c3l678d6blmo?user=sgvwtteepghuko&password=-soV4O0FkOUxe_FpIp2hPcPT_G&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-jpa.ddl=update
+#HEROKU
+#db=postgres://ec2-54-225-121-179.compute-1.amazonaws.com:5432/d6c3l678d6blmo?user=sgvwtteepghuko&password=-soV4O0FkOUxe_FpIp2hPcPT_G&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+#jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+#jpa.ddl=update
 
 %prod.db=${DATABASE_URL}
 #
 # To connect to a local MySQL5 database, use:
-# db=mysql://user:pwd@host/database
+db=mysql://root@localhost/redacao
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
