download de arquivos da amazon

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-application.name=plays3upload
+application.name=redacao-1.2.5
 
 # Application mode
 # ~~~~~
